tenzir/integration/data/reference/from_to/test_from_failure/step_00.ref
error: unsupported scheme `unknown`
 --> <input>:1:7
  |
1 | from "unknown://example.org"
  |       ^^^^^^^ 
  |
  = note: supported schemes for deduction: `file`, `ftp`, `ftps`, `http`, `https`, `tcp`, `udp`
  = docs: https://docs.tenzir.com/tql2/operators/from